--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
                 <h5>Mai 2017/ Février 2019</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat officiis fugiat consequatur alias aut? Cumque quia velit expedita officia neque, totam alias, dolore reiciendis optio non perferendis excepturi blanditiis accusamus!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+
             </section>
             <section class="exp2">
                 <h3>Buffalo Grill</h3>
                 <h4>Commis de cuisine</h4>
                 <h5>2015/2016</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat officiis fugiat consequatur alias aut? Cumque quia velit expedita officia neque, totam alias, dolore reiciendis optio non perferendis excepturi blanditiis accusamus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sint quaerat tenetur fuga illum excepturi. Architecto aspernatur quidem, fuga necessitatibus ipsa eos nesciunt eaque nostrum earum distinctio aperiam ullam magni.</p>
             </section>
         </section>
@@ -57,7 +66,7 @@
         <section class="contact">
             <h2>Mes coordonnées</h2>
             <p><i class="fas fa-phone"></i> 07 60 71 74 50</p>
-            <p><i class="fas fa-at"></i> couturiernicolas@gmail.com</p>
+            <p><i class="fas fa-at"></i> couturiernicolas0@gmail.com</p>
             <p><i class="fas fa-map-marker-alt"></i> 8 Ter impasse du piot, 17220 Sainte-Soulle</p>
             <p><i class="fas fa-car"></i> Permis B</p>
         </section>
